--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 mursvet-ru
 cool_sites
+css_learn/Before_and_After_pseudo_elements/index.html
+css_learn/Before_and_After_pseudo_elements/css/style.css
